--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,13 +1,10 @@
 @import "~normalize.css";
 
 @import "_variables";
-@import "modules/hello.scss";
+
 
 body {
-  background: $wtf;
-  color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  background: #242424;
+
   min-height: 100vh;
 }
