fixed navbar and home background image

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,24 +9,39 @@
   list-style: none;
   box-sizing: border-box;
 }
-body {
-  background: #f2f2f2;
-  min-height: 100vh;
-}
+// body {
+//   background: #3B7455;
+// }
 
 .announcement-bar {
   background-color: #222222;
-  height: 80px;
-  color: #f2f2f2f2;
+  height: 84px;
+  color: #ffeed6;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 32px;
+  padding: 35px;
+	position: fixed;
+	top: 0;
+}
+
+.background-image {
+  width: 100vh;
+  height: 100vw;
+}
+
+.home {
+  background-image: url("../assets/img/wallpaperflare.com_wallpaper.jpg");
+  height: 100vh;
+  width: 100%;
+  background-position: center;
+  //background-color: #3B7455;
 }
 
 .logo {
   font-size: 40px;
+  font-weight:900
 }
 
 .navigation {
@@ -39,6 +54,10 @@ body {
   color: #f2f2f2f2;
 }
 
+// .page-wrapper {
+//   width: 100vw;
+// }
+
 .social-media {
   width: 250px;
   font-size: 20px;
@@ -47,10 +66,16 @@ body {
 }
 
 .social-media__link {
-  width: 50px;
-  margin-right: 16px;
+  width: 30px;
+  height: 30px;
+  margin-left: 10px;
   color: #222222;
   border: 2px solid #f2f2f2;
-  border-radius: 8px;
+  border-radius: 50%;
   background-color: #f2f2f2;
+}
+
+.tour {
+  min-height: 100vh;
+  background-color: #ffeed6;
 }
